[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://GooseGame.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Plate" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
custom_constants/separation = 200
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/Plate"]
margin_left = 512.0
margin_right = 512.0
size_flags_stretch_ratio = 0.0

[node name="gridImage" type="GridContainer" parent="MarginContainer/VBoxContainer/Plate/CenterContainer"]
custom_constants/vseparation = 90
custom_constants/hseparation = 90
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backgroundDark" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.878431 )

[node name="WordDetails" type="Popup" parent="."]
visible = true
margin_right = 48.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="popup_hide" from="WordDetails" to="." method="_on_WordDetails_popup_hide"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
